@@ -593,6 +593,7 @@
  *                           and AP_REG_PCRE_LOADED to ap_regex.h.
  * 20120211.124 (2.4.51-dev) Add name_ex to struct proxy_worker_shared
  * 20120211.125 (2.4.55-dev) Export mod_http2.h as public header
+ * 20120211.126 (2.4.55-dev) Add additional hcmethod_t enums and PROXY_WORKER_IS_ERROR
  *
  */
 
@@ -601,7 +602,7 @@
 #ifndef MODULE_MAGIC_NUMBER_MAJOR
 #define MODULE_MAGIC_NUMBER_MAJOR 20120211
 #endif
-#define MODULE_MAGIC_NUMBER_MINOR 125                 /* 0...n */
+#define MODULE_MAGIC_NUMBER_MINOR 126                 /* 0...n */
 
 /**
  * Determine if the server's current MODULE_MAGIC_NUMBER is at least a
